# backend2176_final

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/dependencies/: __init__.py
backend/app/routes/: auth.py  posts.py
frontend/src/lib/: api.ts  stores.ts
frontend/src/lib/components/: LoadingOverlay.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/login/: +page.svelte
frontend/src/routes/post/: +page.svelte
frontend/src/routes/register/: +page.svelte
