[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.121.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".vscode"
]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = true
